refactor(exception): redesign entire exception handling system
- refactor BaseException to remove HTTP concern
- refactor GlobalExceptionHandler to use ErrorResponseMapper
- introduce ErrorResponseMapper for centralized response mapping
- refactor CommonExceptions for clearer responsibility separation
- refactor CinemaExceptions to align with domain-only design
- update unit tests for CommonExceptions and CinemaExceptions
- improve consistency and clean architecture compliance